variables.Variables.scala.error
Erreur de compilation :
Variables:8: error: not found: value get
recule(get)
       ^