variables.Variables.scala.code
var x=0
while(estSurBiscuit()==false)
{
avance()
x=x+1
}
prendBiscuit()
recule(get)
poseBiscuit()
x=0